# NYRO

./: .gitignore  CHANGELOG.md  CHANGELOG_CN.md  Cargo.toml  Makefile  README.md  README_CN.md  pytest.ini  requirements-dev.txt
conf/: nyro.yaml  (+1 more)
race-gateway/: Cargo.toml
race-gateway/docs/: README.md  loadtest-and-metrics.md  perf-review-fix-plan.md
race-gateway/examples/dev/: bootstrap.local.json
race-gateway/examples/loadtest/: openai-chat.json
race-gateway/src/: lib.rs  main.rs
race-gateway/src/adapters/: anthropic.rs  google.rs  mod.rs  openai.rs
race-gateway/src/app/: cache.rs  mod.rs
race-gateway/src/config/: app.rs
race-gateway/src/control_plane/: mod.rs
race-gateway/src/data_plane/: mod.rs  request.rs  runner.rs
race-gateway/src/domain/: mod.rs  resolve.rs  types.rs  validate.rs
race-gateway/src/downstream/: mod.rs
race-gateway/src/group/: diagnostics.rs  mod.rs  race_core.rs  scheduler.rs  stats.rs  types.rs  weight_tracker.rs
race-gateway/src/key_pool/: mod.rs
race-gateway/src/observability/: mod.rs
race-gateway/src/runtime/: mod.rs
race-gateway/src/storage/: bootstrap.rs  mod.rs  sqlite.rs
race-gateway/src/web/: mod.rs
race-gateway/tests/: admin_api.rs  bootstrap_smoke.rs  proxy_integration.rs
race-gateway/webui/: README.md  sync-assets.ps1
race-gateway/webui/src/: admin.css  admin.js
upstream-gateway/: Cargo.toml  README.md
upstream-gateway/docs/: architecture.md  development-tasks.md  gemini-first-cutover.md  rate-limit-fix-plan.md  reuse-inventory.md
upstream-gateway/examples/gemini-first/: README.md  bootstrap.local.json  bootstrap.template.json  nyro.claude-code.standalone.yaml  nyro.standalone.yaml  validate.ps1
upstream-gateway/src/: errors.rs  lib.rs  main.rs
upstream-gateway/src/app/: mod.rs
upstream-gateway/src/config/: app.rs  mod.rs  rate_limit.rs
upstream-gateway/tests/: perf_smoke.rs  rate_limit_runtime.rs
upstream-gateway/webui/: index.html  package.json  vite.config.ts
(+318 files in other folders)
